<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#dbcece"
        android:gravity="right"
        android:textSize="20sp"
        android:textColor="#000"
        android:id="@+id/txtDisplay"
        />

    <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/one"
        android:textColor="#fff"
        android:id="@+id/bOne"
        android:layout_below="@+id/txtDisplay"
        android:layout_marginTop="15dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
         />
    <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/two"
        android:textColor="#fff"
        android:id="@+id/bTwo"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/bOne"
        android:layout_below="@+id/txtDisplay"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
    <Button
      	android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/three"
        android:textColor="#fff"
        android:id="@+id/bThree"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/bTwo"
        android:layout_below="@+id/txtDisplay"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
    <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/clear"
        android:textColor="#fff"
        android:id="@+id/bClear"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/bThree"
        android:layout_below="@+id/txtDisplay"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
    <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/four"
        android:textColor="#fff"
        android:id="@+id/bFour"
        android:layout_below="@+id/bOne"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
    <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/five"
        android:textColor="#fff"
        android:id="@+id/bFive"
        android:layout_below="@+id/bTwo"
        android:layout_toRightOf="@+id/bFour"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
    <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/six"
        android:textColor="#fff"
        android:id="@+id/bSix"
        android:layout_below="@+id/bThree"
        android:layout_toRightOf="@+id/bFive"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
    <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/plus"
        android:textColor="#fff"
        android:id="@+id/bAdd"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/bSix"
        android:layout_below="@+id/bClear"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/seven"
        android:textColor="#fff"
        android:id="@+id/bSeven"
        android:layout_below="@+id/bFour"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/eight"
        android:textColor="#fff"
        android:id="@+id/bEight"
        android:layout_below="@+id/bFive"
        android:layout_toRightOf="@+id/bSeven"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/nine"
        android:textColor="#fff"
        android:id="@+id/bNine"
        android:layout_below="@+id/bSix"
        android:layout_toRightOf="@+id/bEight"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/minus"
        android:textColor="#fff"
        android:id="@+id/bSub"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/bNine"
        android:layout_below="@+id/bAdd"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/multiply"
        android:textColor="#fff"
        android:id="@+id/bMultiply"
        android:layout_below="@+id/bSeven"
        android:layout_marginTop="5dp"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/divide"
        android:textColor="#fff"
        android:id="@+id/bDivide"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/bMultiply"
        android:layout_below="@+id/bEight"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/zero"
        android:textColor="#fff"
        android:id="@+id/bZero"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/bDivide"
        android:layout_below="@+id/bNine"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
     <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/equals"
        android:textColor="#fff"
        android:id="@+id/bEquals"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/bZero"
        android:layout_below="@+id/bSub"
        android:background="#000"
        android:layout_marginLeft="5dp"
        />
      <Button
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:text="@string/dot"
        android:textColor="#fff"
        android:id="@+id/bDot"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/bMultiply"
        android:layout_marginLeft="112.5dp"
        android:background="#000"
        android:layout_marginRight="5dp"
        />

      <Button
          android:layout_width="65dp"
          android:layout_height="45dp"
          android:layout_alignBaseline="@+id/bDot"
          android:layout_alignBottom="@+id/bDot"
          android:layout_toLeftOf="@+id/bDivide"
          android:id="@+id/bSqrt"
          android:layout_marginTop="5dp"
          android:background="#000"
          android:text="@string/sqrt"
          android:textColor="#fff" 
          android:gravity="center"
          android:layout_marginLeft="5dp"
          />

      <Button
          android:layout_width="65dp"
          android:layout_height="45dp"
          android:layout_alignBaseline="@+id/bDot"
          android:layout_alignBottom="@+id/bDot"
          android:layout_alignLeft="@+id/bEquals"
          android:id="@+id/bSqr"
          android:layout_marginTop="5dp"
          android:background="#000"
          android:gravity="center"
          android:text="@string/sqr"
          android:textColor="#fff"
          android:layout_marginRight="5dp" 
          />

</RelativeLayout>

